# pirate-walletd

./: Cargo.toml  Rocket.toml
src/: main.rs  rpc.rs
