[package]
name = "zcash-walletd"
version = "0.1.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Helpers
anyhow = "1.0.45"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.69"
hex = "0.4.3"
thiserror = "1.0.30"
env_logger = "0.8.4"
log = "0.4.14"
clap = { version = "3.0.0", features = ["derive"] }

# REST / RPC
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
tonic = { version = "0.4.3", features = ["tls", "tls-roots"] }
prost = "0.7"
reqwest = { version = "0.11.6", features = ["json"] }

# Async
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.7"

# DB
rusqlite = "0.26.1"

# Crypto
tiny-bip39 = "0.8"
bls12_381 = "^0.4.0"
jubjub = "^0.6"
ff = "^0.9"
group = "0.9.0"

zcash_client_backend = "0.5"
zcash_primitives = "0.5"
zcash_proofs = "0.5"

[build-dependencies]
tonic-build = "0.4.2"

[patch.crates-io]
zcash_client_backend = {git = 'https://github.com/piratenetwork/librustzcash', rev = '9d1e981140893e213a70bce779b5d3241a37f3a2'}
zcash_primitives = {git = 'https://github.com/piratenetwork/librustzcash', rev = '9d1e981140893e213a70bce779b5d3241a37f3a2'}
zcash_proofs = {git = 'https://github.com/piratenetwork/librustzcash', rev = '9d1e981140893e213a70bce779b5d3241a37f3a2'}
